[package]
name = "sajou"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
curl = "0.4.44"
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.17"
moka = { version = "0.10.2", features = ["future"] }
regex = "1.7.3"
scraper = "0.16.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.95"
serenity = "0.11.5"
tokio = { version = "1.28.1", features = ["rt-multi-thread"]}
